--- a/src/app/layouts/components/header/header.component.scss
+++ b/src/app/layouts/components/header/header.component.scss
@@ -58,6 +58,7 @@
 display: flex;
   align-items: center;
   .user-avatar{
+    overflow: hidden;
     height: 40px;
     width: 40px;
     background: goldenrod;
