--- a/src/app/layouts/pages/projects/projects.component.html
+++ b/src/app/layouts/pages/projects/projects.component.html
@@ -11,6 +11,7 @@
   </form>
 </div>
 <div class="projects-box">
+  <app-loader ></app-loader>
   <app-loader *ngIf="loading; else content"></app-loader>
   <ng-template #content>
     <ul *ngIf="projects.length; else emptyprojects">
