--- a/src/app/layouts/pages/home/home.component.html
+++ b/src/app/layouts/pages/home/home.component.html
@@ -2,17 +2,13 @@
   <div class="home_welcome">
     <div class="welcome-text ">
       <div>
-        <h1>Welcome to TimerApp</h1>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at eius eum ex excepturi expedita facilis
-          incidunt, ipsum, magnam nam necessitatibus velit voluptatum. Accusamus, cumque doloribus optio repellat sint
-          voluptas.</p>
+        <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
       </div>
       <div>
-        <h2>Your abilities</h2>
         <ul>
-          <li class="white-back">Create Projects and Tasks</li>
-          <li class="white-back">Use the timer to count the time of work on the task</li>
-          <li class="white-back">Send messages to your friends directly from TimerApp</li>
+          <li>Create Projects and Tasks for your workers</li>
+          <li>Use the timer to count the time of work on the task</li>
+          <li>Send messages to your friends directly from TimerApp</li>
         </ul>
       </div>
     </div>
