--- a/src/app/layouts/pages/home/components/register/register.component.html
+++ b/src/app/layouts/pages/home/components/register/register.component.html
@@ -3,6 +3,6 @@
   <input class="input" type="text" placeholder="Email..." formControlName="email">
   <input class="input" type="text" placeholder="Nickname..." formControlName="nickname">
   <input class="input" type="password" placeholder="Password..." formControlName="pass">
-  <button class="btn btn--hover-blue" (click)="register()">Register</button>
+  <button class="btn btn--hover-gold" (click)="register()">Register</button>
 </form>
 
