--- a/src/app/layouts/pages/projects/projects.component.scss
+++ b/src/app/layouts/pages/projects/projects.component.scss
@@ -98,8 +98,8 @@
         display: flex;
         justify-content: center;
         background: white;
-        border-radius: 2px;
-        box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+        //border-radius: 2px;
+        //box-shadow: $shadow;
         transition: 300ms;
         text-decoration: none;
         flex-flow: column;
@@ -118,13 +118,16 @@
         }
 
         &:hover {
-          box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.75);
+         h3{
+           color: $blue
+         }
         }
 
         h3 {
           font-size: 26px;
           margin: 0;
           margin-bottom: 8px;
+          transition: 300ms;
         }
       }
     }
