--- a/src/app/layouts/pages/messages/components/messages-box/messages-box.component.scss
+++ b/src/app/layouts/pages/messages/components/messages-box/messages-box.component.scss
@@ -36,8 +36,8 @@
 
         .avatar {
           height: 40px;
+          overflow: hidden;
           width: 40px;
-          background: grey;
           border-radius: 100%;
         }
       }
