--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.scss
@@ -40,7 +40,7 @@
       justify-content: center;
       width: 20%;
       .avatar{
-        background: grey;
+        overflow: hidden;
         width: 40px;
         border-radius: 100%;
         height: 40px;
