--- a/src/app/layouts/pages/projects/pages/project/project.component.html
+++ b/src/app/layouts/pages/projects/pages/project/project.component.html
@@ -2,31 +2,22 @@
   <div class="container">
     <div class="project-info">
       <div class="project-info-box">
-        <h1>{{project.name}}   <input type="text" [(ngModel)]="project.name" *ngIf="changeProjectMode"></h1>
-        <p>Owner: <a class="btn btn__link btn__link--blue"
-                     [routerLink]="'/messages/'+project.owner._id">{{project.owner.nickname}}</a></p>
-
-      </div>
-      <div class="project-info-control">
-        <app-drop *ngIf="project.owner._id === storageService.user._id">
+        <app-drop [classes]="'drop-tip'" [openOn]="'hover'" [position]="'bottom left'">
           <div class="target">
-            <button class="btn btn--outline-black btn-add-project">
-              <svg-icon src="assets/img/crown.svg" [svgStyle]="{ 'width.px':'20' }"></svg-icon>
-            </button>
+            <h1>{{project.name}}</h1>
           </div>
           <div class="content">
-            <div class="owner-control some-back some-back--black">
-              <div>
-                <button class="btn btn--outline-blue" (click)="changeProject()">Change</button>
-                <button class="btn btn--outline-red" (click)="deleteProject()">Delete</button>
-              </div>
-              <div>
-                <input class="input input--big" type="text" placeholder="email" [(ngModel)]="newWorker">
-                <button class="btn btn--outline-blue" (click)="addWorker()">AddWorker</button>
-              </div>
-            </div>
+            <b>{{project.name}}</b>
+            <p>Owner:
+              <a class="btn btn__link btn__link--white"
+                 [routerLink]="'/messages/'+project.owner._id">{{project.owner.nickname}}</a>
+            </p>
           </div>
         </app-drop>
+      </div>
+      <div class="project-info-control">
+        <input type="text" placeholder="Write name of task" [formControl]="searchTasks">
+        <button class="btn btn__link btn__link--blue"  [ngClass]="{ 'btn__link--blue__active':options.type ==='owner'}"  (click)="changeType('owner')">Show Only My Tasks</button>
         <app-drop>
           <div class="target">
             <button class="btn btn--outline-blue btn-add-project"> add Task</button>
@@ -70,52 +61,75 @@
             </div>
           </div>
         </app-drop>
+        <app-drop *ngIf="project.owner._id === storageService.user._id">
+          <div class="target">
+            <button class="btn btn--outline-black btn-add-project">
+              <svg-icon src="assets/img/crown.svg" [svgStyle]="{ 'width.px':'20' }"></svg-icon>
+            </button>
+          </div>
+          <div class="content">
+            <div class="owner-control some-back some-back--black">
+              <div>
+                <button class="btn btn--outline-blue" (click)="changeProject()">Change</button>
+                <input type="text" [(ngModel)]="project.name" *ngIf="changeProjectMode">
+                <button class="btn btn--outline-red" (click)="deleteProject()">Delete</button>
+              </div>
+              <div>
+                <input class="input input--big" type="text" placeholder="email" [(ngModel)]="newWorker">
+                <button class="btn btn--outline-blue" (click)="addWorker()">AddWorker</button>
+              </div>
+            </div>
+          </div>
+        </app-drop>
       </div>
     </div>
   </div>
 </div>
 
 <div class="project-tasks-box">
-  <app-loader *ngIf="loading; else content"></app-loader>
-  <ng-template #content>
-    <ul *ngIf="project.tasks.length; else emptytasks" class="task-list">
-      <li *ngFor="let task of project.tasks; let i = index" class="white-back">
-        <div class="task-main">
-          <div class="task-main__header">
-            <div>
-              <h2>{{task.name}}</h2>
-              <p>Created by: {{task.owner.nickname}}</p>
-              <p>Worker: {{task.worker.nickname}}</p>
-            </div>
-            <div>
-              <button (click)="deleteTask(task,i)">Delete</button>
-            </div>
+  <ul *ngIf="project.tasks.length; else emptytasks" class="task-list"
+      infiniteScroll
+      [infiniteScrollDistance]="2"
+      [infiniteScrollThrottle]="50"
+      (scrolled)="getTasks()">
+    <li *ngFor="let task of project.tasks; let i = index" class="white-back">
+      <div class="task-main">
+        <div class="task-main__header">
+          <div>
+            <h2>{{task.name}}</h2>
+            <p>Created by: {{task.owner.nickname}}</p>
+            <p>Worker: {{task.worker.nickname}}</p>
           </div>
-          <br>
-          <div *ngIf="task.total">
-            <h4>Total:  {{getTime(task.total)}}</h4>
+          <div>
+            <button (click)="deleteTask(task,i)">Delete</button>
           </div>
         </div>
-        <div class="task-timer"
-             *ngIf="task.worker._id === storageService.user._id &&(task.timerStarted || (storageService.user && !storageService.user.currentTimer))">
-          <div class="time">
-            {{timerNow}}
-          </div>
-          <div class="control">
-            <button *ngIf="!storageService.user.currentTimer" (click)="startTimer(task)">start</button>
-            <button *ngIf="storageService.user.currentTimer && task._id === storageService.user.currentTimer._id " (click)="stopTimer(task)">stop</button>
-          </div>
+        <br>
+        <div *ngIf="task.total">
+          <h4>Total:  {{getTime(task.total)}}</h4>
         </div>
-      </li>
-    </ul>
-    <ng-template #emptytasks>
-      <div class="projects-empty white-back">
-        <h3>Create your first task!</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus alias aliquam architecto assumenda
-          atque</p>
       </div>
-    </ng-template>
-
+      <div class="task-timer"
+           *ngIf="task.worker._id === storageService.user._id &&(task.timerStarted || (storageService.user && !storageService.user.currentTimer))">
+        <div class="time">
+          {{timerNow}}
+        </div>
+        <div class="control">
+          <button *ngIf="!storageService.user.currentTimer" (click)="startTimer(task)">start</button>
+          <button *ngIf="storageService.user.currentTimer && task._id === storageService.user.currentTimer._id "
+                  (click)="stopTimer(task)">stop
+          </button>
+        </div>
+      </div>
+    </li>
+  </ul>
+  <ng-template #emptytasks>
+    <div class="projects-empty white-back" *ngIf="!loading">
+      <h3>Create your first task!</h3>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusamus alias aliquam architecto assumenda
+        atque</p>
+    </div>
   </ng-template>
+  <app-loader *ngIf="loading"></app-loader>
 
 </div>
