--- a/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
+++ b/src/app/layouts/pages/messages/components/sidebar/sidebar.component.html
@@ -11,6 +11,7 @@
         <span class="avatar"><img [src]="room.chatWith.avatar" alt=""></span>
       </div>
       <span class="room-name">{{room.chatWith.nickname}}</span>
+      {{room.updatedAt}}
     </li>
   </ul>
   <ng-template #searchList>
