--- a/src/app/layouts/pages/projects/projects.component.scss
+++ b/src/app/layouts/pages/projects/projects.component.scss
@@ -113,6 +113,7 @@
           font-family: $fontHind;
           margin-bottom: 8px;
           padding-right: 36px;
+          word-break: break-word;
           line-height: 36px;
           transition: 300ms;
         }
